--- a/cfg/yolov7-pose-defconv.yaml
+++ b/cfg/yolov7-pose-defconv.yaml
@@ -62,7 +62,7 @@ backbone:
    [-1, 1, DefConv2d, [512]],
    [-1, 1, DefConv2d, [512]],
    [-1, 1, DefConv2d, [512]],
-   [-1, 1, DefConv2d, [512],
+   [-1, 1, DefConv2d, [512]],
    [[-1, -3, -5, -6], 1, Concat, [1]],
    [-1, 1, Conv, [1024, 1, 1]],  # 46
   ]
