--- a/cfg/yolov7-pose-coord.yaml
+++ b/cfg/yolov7-pose-coord.yaml
@@ -58,7 +58,7 @@ backbone:
    [-1, 1, Conv, [384, 3, 1]],
    [[-1, -3, -5, -6], 1, Concat, [1]],
    [-1, 1, Conv, [768, 1, 1]],  # 40
-   [-1, 1, CoordinateAttention, [768],]
+   [-1, 1, CoordinateAttention, [768]],
          
    [-1, 1, Conv, [1024, 3, 2]],  # 42-P6/64
    [-1, 1, Conv, [512, 1, 1]],
