--- a/cfg/yolov7-pose-double.yaml
+++ b/cfg/yolov7-pose-double.yaml
@@ -25,7 +25,7 @@ backbone:
    [-1, 1, Conv, [64, 3, 1]],
    [[-1, -3, -5, -6], 1, Concat, [1]],
    [-1, 1, Conv, [128, 1, 1]],  # 10
-   [-1, 1, DoubleAttention, [128]],
+   [-1, 1, DoubleAttention, [128, 128]],
          
    [-1, 1, Conv, [256, 3, 2]],  # 12-P3/8
    [-1, 1, Conv, [128, 1, 1]],
@@ -36,7 +36,7 @@ backbone:
    [-1, 1, Conv, [128, 3, 1]],
    [[-1, -3, -5, -6], 1, Concat, [1]],
    [-1, 1, Conv, [256, 1, 1]],  # 20
-   [-1, 1, DoubleAttention, [256]],
+   [-1, 1, DoubleAttention, [256, 256]],
          
    [-1, 1, Conv, [512, 3, 2]],  # 22-P4/16
    [-1, 1, Conv, [256, 1, 1]],
@@ -47,7 +47,7 @@ backbone:
    [-1, 1, Conv, [256, 3, 1]],
    [[-1, -3, -5, -6], 1, Concat, [1]],
    [-1, 1, Conv, [512, 1, 1]],  # 30
-   [-1, 1, DoubleAttention, [512]],
+   [-1, 1, DoubleAttention, [512, 512]],
          
    [-1, 1, Conv, [768, 3, 2]],  # 32-P5/32
    [-1, 1, Conv, [384, 1, 1]],
@@ -58,7 +58,7 @@ backbone:
    [-1, 1, Conv, [384, 3, 1]],
    [[-1, -3, -5, -6], 1, Concat, [1]],
    [-1, 1, Conv, [768, 1, 1]],  # 40
-   [-1, 1, DoubleAttention, [768]],
+   [-1, 1, DoubleAttention, [768, 768]],
          
    [-1, 1, Conv, [1024, 3, 2]],  # 42-P6/64
    [-1, 1, Conv, [512, 1, 1]],
@@ -69,7 +69,7 @@ backbone:
    [-1, 1, Conv, [512, 3, 1]],
    [[-1, -3, -5, -6], 1, Concat, [1]],
    [-1, 1, Conv, [1024, 1, 1]],  # 50
-   [-1, 1, DoubleAttention, [1024]],
+   [-1, 1, DoubleAttention, [1024, 1024]],
   ]
 
 head:
